--- a/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
+++ b/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
@@ -48,7 +48,7 @@
 <!-- Footer -->
 <footer class="navbar navbar-light fixed-bottom bg-light">
   <div class="full-width">
-    <a class="color-black float-right" routerLink="/user/{{uid}}"
+    <a class="color-black float-right" routerLink="/profile"
       ><i class="fas fa-user"></i
     ></a>
   </div>
