--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -1,56 +1,77 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-black" routerLink="/user/{{uid}}/website/{{wid}}/page"><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget">Widgets</a>
-    <a class="color-black" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/new"><i class="fas fa-plus"></i></a>
+  <a class="color-black" routerLink="/user/{{uid}}/website/{{wid}}/page"
+    ><i class="fas fa-chevron-left"></i
+  ></a>
+  <a
+    class="navbar-brand"
+    routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"
+    >Widgets</a
+  >
+  <a
+    class="color-black"
+    routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/new"
+    ><i class="fas fa-plus"></i
+  ></a>
 </nav>
 <!-- Main Content -->
 <div class="container-fluid">
-    <!-- Widgets -->
-    <div *ngFor="let widget of widgets">
-        <!-- Icons -->
-        <div class="absolute-right">
-            <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}"><i class="fas fa-cog"></i></a>
-            <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"><i class="fas fa-bars"></i></a>
-        </div>
-        <!-- Content -->
-        <div [ngSwitch]="widget.widgetType">
-            <div *ngSwitchCase="'HEADING'">
-                <div [ngSwitch]="widget.size">
-                    <div *ngSwitchCase="1">
-                        <h1>{{widget.text}}</h1>
-                    </div>
-                    <div *ngSwitchCase="2">
-                        <h2>{{widget.text}}</h2>
-                    </div>
-                    <div *ngSwitchCase="3">
-                        <h3>{{widget.text}}</h3>
-                    </div>
-                    <div *ngSwitchCase="4">
-                        <h4>{{widget.text}}</h4>
-                    </div>
-                    <div *ngSwitchCase="5">
-                        <h5>{{widget.text}}</h5>
-                    </div>
-                    <div *ngSwitchCase="6">
-                        <h6>{{widget.text}}</h6>
-                    </div>
-                </div>
-            </div>
-            <div *ngSwitchCase="'IMAGE'">
-                <img [src]="widget.url" [style.width]="widget.width" />
-            </div>
-            <div *ngSwitchCase="'YOUTUBE'">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe [src]="parseYoutubeSrc(widget.url)" [style.width]="widget.width" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
+  <!-- Widgets -->
+  <div *ngFor="let widget of widgets">
+    <!-- Icons -->
+    <div class="absolute-right">
+      <a
+        routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}"
+        ><i class="fas fa-cog"></i
+      ></a>
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"
+        ><i class="fas fa-bars"></i
+      ></a>
     </div>
+    <!-- Content -->
+    <div [ngSwitch]="widget.widgetType">
+      <div *ngSwitchCase="'HEADING'">
+        <div [ngSwitch]="widget.size">
+          <div *ngSwitchCase="1">
+            <h1>{{ widget.text }}</h1>
+          </div>
+          <div *ngSwitchCase="2">
+            <h2>{{ widget.text }}</h2>
+          </div>
+          <div *ngSwitchCase="3">
+            <h3>{{ widget.text }}</h3>
+          </div>
+          <div *ngSwitchCase="4">
+            <h4>{{ widget.text }}</h4>
+          </div>
+          <div *ngSwitchCase="5">
+            <h5>{{ widget.text }}</h5>
+          </div>
+          <div *ngSwitchCase="6">
+            <h6>{{ widget.text }}</h6>
+          </div>
+        </div>
+      </div>
+      <div *ngSwitchCase="'IMAGE'">
+        <img [src]="widget.url" [style.width]="widget.width" />
+      </div>
+      <div *ngSwitchCase="'YOUTUBE'">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe
+            [src]="parseYoutubeSrc(widget.url)"
+            [style.width]="widget.width"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Footer -->
 <footer class="navbar navbar-light fixed-bottom bg-light">
-    <div class="full-width">
-        <a class="color-black float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a>
-    </div>
+  <div class="full-width">
+    <a class="color-black float-right" routerLink="/profile"
+      ><i class="fas fa-user"></i
+    ></a>
+  </div>
 </footer>
