--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -1,29 +1,67 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-black" routerLink="/user/{{uid}}/website/{{wid}}/page"><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}">Edit Page</a>
-    <button form="myForm" class="color-black btn bg-transparent" type="submit" [disabled]="myForm.invalid"><i class="fas fa-check"></i></button>
+  <a class="color-black" routerLink="/user/{{uid}}/website/{{wid}}/page"
+    ><i class="fas fa-chevron-left"></i
+  ></a>
+  <a
+    class="navbar-brand"
+    routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}"
+    >Edit Page</a
+  >
+  <button
+    form="myForm"
+    class="color-black btn bg-transparent"
+    type="submit"
+    [disabled]="myForm.invalid"
+  >
+    <i class="fas fa-check"></i>
+  </button>
 </nav>
 <!-- Form -->
-<div class='container'>
-    <form id="myForm" #myForm="ngForm" (ngSubmit)="update()">
-        <div class="form-group">
-            <label for="name"><b>Name</b></label>
-            <input required class="form-control" id="name" type="text" placeholder="Name of the page..." name="name"
-                [(ngModel)]="page.name">
-        </div>
-        <div class="form-group">
-            <label for="title"><b>Title</b></label>
-            <input class="form-control" type="text" id="title" placeholder="Title of the page..." name="title"
-                [(ngModel)]="page.title">
-        </div>
-        <a routerLink="/user/{{uid}}/website/{{wid}}/page" class="btn btn-lg btn-warning">Cancel</a>
-        <button type="button" (click)="delete()" class="btn btn-lg btn-danger float-right">Delete</button>
-    </form>
+<div class="container">
+  <form id="myForm" #myForm="ngForm" (ngSubmit)="update()">
+    <div class="form-group">
+      <label for="name"><b>Name</b></label>
+      <input
+        required
+        class="form-control"
+        id="name"
+        type="text"
+        placeholder="Name of the page..."
+        name="name"
+        [(ngModel)]="page.name"
+      />
+    </div>
+    <div class="form-group">
+      <label for="title"><b>Title</b></label>
+      <input
+        class="form-control"
+        type="text"
+        id="title"
+        placeholder="Title of the page..."
+        name="title"
+        [(ngModel)]="page.title"
+      />
+    </div>
+    <a
+      routerLink="/user/{{uid}}/website/{{wid}}/page"
+      class="btn btn-lg btn-warning"
+      >Cancel</a
+    >
+    <button
+      type="button"
+      (click)="delete()"
+      class="btn btn-lg btn-danger float-right"
+    >
+      Delete
+    </button>
+  </form>
 </div>
 <!-- Footer -->
 <footer class="navbar navbar-light fixed-bottom bg-light">
-    <div class="full-width">
-        <a class="color-black float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a>
-    </div>
+  <div class="full-width">
+    <a class="color-black float-right" routerLink="/profile"
+      ><i class="fas fa-user"></i
+    ></a>
+  </div>
 </footer>
